force-app/main/default/objects/WorkOrder/fields/Report_Generation_Flag__c.field-meta.xml
<CustomField>
    <fullName>Report_Generation_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Report Generation Flag</label>
    <type>Checkbox</type>
</CustomField>