force-app/main/default/objects/WorkOrder/fields/Service_Report_ID__c.field-meta.xml
<CustomField>
    <fullName>Service_Report_ID__c</fullName>
    <label>Service Report ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>