force-app/main/default/objects/WorkOrder/fields/Service_Report_Signature__c.field-meta.xml
<CustomField>
    <fullName>Service_Report_Signature__c</fullName>
    <label>Service Report Signature</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>